[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taming-transformers"
version = "0.0.1"
description = "Taming Transformers for High-Resolution Image Synthesis"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.6"
license = { text = "MIT License" }
authors = [
    { name = "Uriah", email = "your.email@example.com" }
]
homepage = "https://github.com/ulisrael/taming-transformers"

[project.urls]
Homepage = "https://github.com/ulisrael/taming-transformers"

[project.dependencies]
torch = "*"
pytorch-lightning = "*"
einops = "*"
Pillow = "*"
omegaconf = "*"
torchvision = "*"

[project.classifiers]
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
