[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taming-transformers"
version = "0.0.1"
description = "Taming Transformers for High-Resolution Image Synthesis"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT License" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "torch",
    "pytorch-lightning",
    "einops",
    "Pillow",
    "omegaconf",
    "torchvision",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["taming", "taming.*"]
exclude = ["data", "assets", "configs"]